5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1798_2566.log
== TEST (2019-06-09 22:41:15) 
-- CODE:
from numpy import*
f=array(eval(input("faltas:")))

s=0
t=0
q=0
qi=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==3):
		q+=1
	elif(f[i]==4):
		qi+=1
	elif(f[i]==5):
		se+=1
	elif(f[i]==6):
		sa+=1
j=zeros(size(f),dtype=int)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 22:51:37) 
-- CODE:
from numpy import*
f=array(eval(input("faltas:")))

s=0
t=0
q=0
qi=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==3):
		q+=1
	elif(f[i]==4):
		q1+=1
	elif(f[i]==5):
		se+=1
	elif(f[i]==6):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6,dtype=int)
for i in range(size(j)):
	j[0]=round(((s/h)*100),2)
	j[1]=round(((t/h)*100),2)
	j[2]=round(((q/h)*100),2)
	j[3]=round(((q1/h)*100),2)
	j[4]=round(((se/h)*100),2)
	j[5]=round(((sa/h)*100),2)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 22:52:21) 
-- CODE:
from numpy import*
f=array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==3):
		q+=1
	elif(f[i]==4):
		q1+=1
	elif(f[i]==5):
		se+=1
	elif(f[i]==6):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6,dtype=int)
for i in range(size(j)):
	j[0]=round(((s/h)*100),2)
	j[1]=round(((t/h)*100),2)
	j[2]=round(((q/h)*100),2)
	j[3]=round(((q1/h)*100),2)
	j[4]=round(((se/h)*100),2)
	j[5]=round(((sa/h)*100),2)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 22:54:39) 
-- CODE:
from numpy import*
f=array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==3):
		q+=1
	elif(f[i]==4):
		q1+=1
	elif(f[i]==5):
		se+=1
	elif(f[i]==6):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6,dtype=int)
for i in range(size(j)):
	j[0]=(((s/h)*100))
	j[1]=((t/h)*100)
	j[2]=((q/h)*100)
	j[3]=((q1/h)*100)
	j[4]=((se/h)*100)
	j[5]=((sa/h)*100)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 22:55:14) 
-- CODE:
from numpy import*
f=array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==3):
		q+=1
	elif(f[i]==4):
		q1+=1
	elif(f[i]==5):
		se+=1
	elif(f[i]==6):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6,dtype=int)
for i in range(size(j)):
	j[0]=(((s/h)*100))
	j[1]=((t/h)*100)
	j[2]=((q/h)*100)
	j[3]=((q1/h)*100)
	j[4]=((se/h)*100)
	j[5]=((sa/h)*100)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 22:55:22) 
-- CODE:
from numpy import*
f=array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==3):
		q+=1
	elif(f[i]==4):
		q1+=1
	elif(f[i]==5):
		se+=1
	elif(f[i]==6):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6,dtype=int)
for i in range(size(j)):
	j[0]=(((s/h)*100))
	j[1]=((t/h)*100)
	j[2]=((q/h)*100)
	j[3]=((q1/h)*100)
	j[4]=((se/h)*100)
	j[5]=((sa/h)*100)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 22:56:21) 
-- CODE:
from numpy import*
f=array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(f):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==3):
		q+=1
	elif(f[i]==4):
		q1+=1
	elif(f[i]==5):
		se+=1
	elif(f[i]==6):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6,dtype=int)
for i in range(size(j)):
	j[0]=(((s/h)*100))
	j[1]=((t/h)*100)
	j[2]=((q/h)*100)
	j[3]=((q1/h)*100)
	j[4]=((se/h)*100)
	j[5]=((sa/h)*100)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 22:57:13) 
-- CODE:
from numpy import*
f=array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==3):
		q+=1
	elif(f[i]==4):
		q1+=1
	elif(f[i]==5):
		se+=1
	elif(f[i]==6):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6,dtype=int)
for i in range(size(j)):
	j[0]=(((s/h)*100))
	j[1]=((t/h)*100)
	j[2]=((q/h)*100)
	j[3]=((q1/h)*100)
	j[4]=((se/h)*100)
	j[5]=((sa/h)*100)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 22:57:51) 
-- CODE:
from numpy import*
f=array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==3):
		q+=1
	elif(f[i]==4):
		q1+=1
	elif(f[i]==5):
		se+=1
	elif(f[i]==6):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6,dtype=int)
for i in range(size(j)):
	j[0]=(((s/h)*100))
	j[1]=((t/h)*100)
	j[2]=((q/h)*100)
	j[3]=((q1/h)*100)
	j[4]=((se/h)*100)
	j[5]=((sa/h)*100)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 22:58:04) 
-- CODE:
from numpy import*
f=array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==3):
		q+=1
	elif(f[i]==4):
		q1+=1
	elif(f[i]==5):
		se+=1
	elif(f[i]==6):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6,dtype=int)
for i in range(size(j)):
	j[0]=(((s/h)*100))
	j[1]=((t/h)*100)
	j[2]=((q/h)*100)
	j[3]=((q1/h)*100)
	j[4]=((se/h)*100)
	j[5]=((sa/h)*100)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 22:58:14) 
-- CODE:
from numpy import*
f=array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==3):
		q+=1
	elif(f[i]==4):
		q1+=1
	elif(f[i]==5):
		se+=1
	elif(f[i]==6):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6,dtype=int)
for i in range(size(j)):
	j[0]=(((s/h)*100))
	j[1]=((t/h)*100)
	j[2]=((q/h)*100)
	j[3]=((q1/h)*100)
	j[4]=((se/h)*100)
	j[5]=((sa/h)*100)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 22:58:31) 
-- CODE:
from numpy import*
f=array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==3):
		q+=1
	elif(f[i]==4):
		q1+=1
	elif(f[i]==5):
		se+=1
	elif(f[i]==6):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6,dtype=int)
for i in range(size(j)):
	j[0]=(((s/h)*100))
	j[1]=((t/h)*100)
	j[2]=((q/h)*100)
	j[3]=((q1/h)*100)
	j[4]=((se/h)*100)
	j[5]=((sa/h)*100)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:00:03) 
-- CODE:
from numpy import*
f=array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==3):
		q+=1
	elif(f[i]==4):
		q1+=1
	elif(f[i]==5):
		se+=1
	elif(f[i]==6):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6,dtype=int)
for i in range(size(j)):
	j[0]=round(((s/h)*100),1)
	j[1]=round(((t/h)*100),1)
	j[2]=round(((q/h)*100),1)
	j[3]=round(((q1/h)*100),1)
	j[4]=round(((se/h)*100),1)
	j[5]=round(((sa/h)*100),1)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:00:31) 
-- CODE:
from numpy import*
f=array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==3):
		q+=1
	elif(f[i]==4):
		q1+=1
	elif(f[i]==5):
		se+=1
	elif(f[i]==6):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6,dtype=float)
for i in range(size(j)):
	j[0]=round(((s/h)*100),1)
	j[1]=round(((t/h)*100),1)
	j[2]=round(((q/h)*100),1)
	j[3]=round(((q1/h)*100),1)
	j[4]=round(((se/h)*100),1)
	j[5]=round(((sa/h)*100),1)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 23:00:48) 
-- CODE:
from numpy import*
f=array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==3):
		q+=1
	elif(f[i]==4):
		q1+=1
	elif(f[i]==5):
		se+=1
	elif(f[i]==6):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6,dtype=float)
for i in range(size(j)):
	j[0]=round(((s/h)*100),1)
	j[1]=round(((t/h)*100),1)
	j[2]=round(((q/h)*100),1)
	j[3]=round(((q1/h)*100),1)
	j[4]=round(((se/h)*100),1)
	j[5]=round(((sa/h)*100),1)
print(j)
-- EXECUTION TIME:
1.13191
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[30.  0.  0.  0. 30. 40.]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 5.9 11.8  0.  23.5 29.4 29.4]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[22.2 11.1  0.  33.3 11.1 22.2]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:00:59) 
-- CODE:
from numpy import*
f=array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==3):
		q+=1
	elif(f[i]==4):
		q1+=1
	elif(f[i]==5):
		se+=1
	elif(f[i]==6):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6,dtype=float)
for i in range(size(j)):
	j[0]=round(((s/h)*100),1)
	j[1]=round(((t/h)*100),1)
	j[2]=round(((q/h)*100),1)
	j[3]=round(((q1/h)*100),1)
	j[4]=round(((se/h)*100),1)
	j[5]=round(((sa/h)*100),1)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:01:32) 
-- CODE:
from numpy import*
f=array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==3):
		q+=1
	elif(f[i]==4):
		q1+=1
	elif(f[i]==5):
		se+=1
	elif(f[i]==6):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6,dtype=float)
for i in range(size(j)):
	j[0]=round(((s/h)*100),2)
	j[1]=round(((t/h)*100),2)
	j[2]=round(((q/h)*100),2)
	j[3]=round(((q1/h)*100),2)
	j[4]=round(((se/h)*100),2)
	j[5]=round(((sa/h)*100),2)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:01:43) 
-- CODE:
from numpy import*
f=array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==3):
		q+=1
	elif(f[i]==4):
		q1+=1
	elif(f[i]==5):
		se+=1
	elif(f[i]==6):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6,dtype=float)
for i in range(size(j)):
	j[0]=round(((s/h)*100),2)
	j[1]=round(((t/h)*100),2)
	j[2]=round(((q/h)*100),2)
	j[3]=round(((q1/h)*100),2)
	j[4]=round(((se/h)*100),2)
	j[5]=round(((sa/h)*100),2)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:02:01) 
-- CODE:
from numpy import*
f=array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==3):
		q+=1
	elif(f[i]==4):
		q1+=1
	elif(f[i]==5):
		se+=1
	elif(f[i]==6):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6,dtype=float)
for i in range(size(j)):
	j[0]=round(((s/h)*100),2)
	j[1]=round(((t/h)*100),2)
	j[2]=round(((q/h)*100),2)
	j[3]=round(((q1/h)*100),2)
	j[4]=round(((se/h)*100),2)
	j[5]=round(((sa/h)*100),2)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:02:52) 
-- CODE:
from numpy import*
f=array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==4):
		q+=1
	elif(f[i]==5):
		q1+=1
	elif(f[i]==6):
		se+=1
	elif(f[i]==7)
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6,dtype=float)
for i in range(size(j)):
	j[0]=round(((s/h)*100),2)
	j[1]=round(((t/h)*100),2)
	j[2]=round(((q/h)*100),2)
	j[3]=round(((q1/h)*100),2)
	j[4]=round(((se/h)*100),2)
	j[5]=round(((sa/h)*100),2)
print(j)
-- ERROR:
File "XXXX", line 22
    elif(f[i]==7)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:03:05) 
-- CODE:
from numpy import*
f=array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==4):
		q+=1
	elif(f[i]==5):
		q1+=1
	elif(f[i]==6):
		se+=1
	elif(f[i]==7):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6,dtype=float)
for i in range(size(j)):
	j[0]=round(((s/h)*100),2)
	j[1]=round(((t/h)*100),2)
	j[2]=round(((q/h)*100),2)
	j[3]=round(((q1/h)*100),2)
	j[4]=round(((se/h)*100),2)
	j[5]=round(((sa/h)*100),2)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 23:03:20) 
-- CODE:
from numpy import*
f=array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==4):
		q+=1
	elif(f[i]==5):
		q1+=1
	elif(f[i]==6):
		se+=1
	elif(f[i]==7):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6,dtype=float)
for i in range(size(j)):
	j[0]=round(((s/h)*100),2)
	j[1]=round(((t/h)*100),2)
	j[2]=round(((q/h)*100),2)
	j[3]=round(((q1/h)*100),2)
	j[4]=round(((se/h)*100),2)
	j[5]=round(((sa/h)*100),2)
print(j)
-- EXECUTION TIME:
1.11667
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.75  0.    0.   18.75 25.   37.5 ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.38  7.69 23.08  7.69 15.38 30.77]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:03:49) 
-- CODE:
from numpy import*
f=array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==4):
		q+=1
	elif(f[i]==5):
		q1+=1
	elif(f[i]==6):
		se+=1
	elif(f[i]==7):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6,dtype=int)
for i in range(size(j)):
	j[0]=round(((s/h)*100),1)
	j[1]=round(((t/h)*100),1)
	j[2]=round(((q/h)*100),1)
	j[3]=round(((q1/h)*100),1)
	j[4]=round(((se/h)*100),1)
	j[5]=round(((sa/h)*100),1)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:04:08) 
-- CODE:
from numpy import*
f=array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==4):
		q+=1
	elif(f[i]==5):
		q1+=1
	elif(f[i]==6):
		se+=1
	elif(f[i]==7):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6,dtype=int)
for i in range(size(j)):
	j[0]=round(((s/h)*100),2)
	j[1]=round(((t/h)*100),2)
	j[2]=round(((q/h)*100),2)
	j[3]=round(((q1/h)*100),2)
	j[4]=round(((se/h)*100),2)
	j[5]=round(((sa/h)*100),2)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:04:32) 
-- CODE:
from numpy import*
f=array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==4):
		q+=1
	elif(f[i]==5):
		q1+=1
	elif(f[i]==6):
		se+=1
	elif(f[i]==7):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6,dtype=float)
for i in range(size(j)):
	j[0]=round(((s/h)*100),1)
	j[1]=round(((t/h)*100),1)
	j[2]=round(((q/h)*100),1)
	j[3]=round(((q1/h)*100),1)
	j[4]=round(((se/h)*100),1)
	j[5]=round(((sa/h)*100),1)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 23:04:43) 
-- CODE:
from numpy import*
f=array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==4):
		q+=1
	elif(f[i]==5):
		q1+=1
	elif(f[i]==6):
		se+=1
	elif(f[i]==7):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6,dtype=float)
for i in range(size(j)):
	j[0]=round(((s/h)*100),1)
	j[1]=round(((t/h)*100),1)
	j[2]=round(((q/h)*100),1)
	j[3]=round(((q1/h)*100),1)
	j[4]=round(((se/h)*100),1)
	j[5]=round(((sa/h)*100),1)
print(j)
-- EXECUTION TIME:
1.07771
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:20:22) 
-- CODE:
from numpy import*
f=array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)-1):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==4):
		q+=1
	elif(f[i]==5):
		q1+=1
	elif(f[i]==6):
		se+=1
	elif(f[i]==7):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6,dtype=float)
for i in range(size(j)):
	j[0]=round(((s/h)*100),1)
	j[1]=round(((t/h)*100),1)
	j[2]=round(((q/h)*100),1)
	j[3]=round(((q1/h)*100),1)
	j[4]=round(((se/h)*100),1)
	j[5]=round(((sa/h)*100),1)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 13:20:37) 
-- CODE:
from numpy import*
f=array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)-1):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==4):
		q+=1
	elif(f[i]==5):
		q1+=1
	elif(f[i]==6):
		se+=1
	elif(f[i]==7):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6,dtype=float)
for i in range(size(j)):
	j[0]=round(((s/h)*100),1)
	j[1]=round(((t/h)*100),1)
	j[2]=round(((q/h)*100),1)
	j[3]=round(((q1/h)*100),1)
	j[4]=round(((se/h)*100),1)
	j[5]=round(((sa/h)*100),1)
print(j)
-- EXECUTION TIME:
0.923103
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[20.   0.   0.  20.  26.7 33.3]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.2  8.3 16.7 20.8 20.8 29.2]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[16.7  8.3 25.   8.3 16.7 25. ]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 13:20:43) 
-- CODE:
from numpy import*
f=array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==4):
		q+=1
	elif(f[i]==5):
		q1+=1
	elif(f[i]==6):
		se+=1
	elif(f[i]==7):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6,dtype=float)
for i in range(size(j)):
	j[0]=round(((s/h)*100),1)
	j[1]=round(((t/h)*100),1)
	j[2]=round(((q/h)*100),1)
	j[3]=round(((q1/h)*100),1)
	j[4]=round(((se/h)*100),1)
	j[5]=round(((sa/h)*100),1)
print(j)
-- EXECUTION TIME:
1.07787
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
